Readapted CreatePokemon API
