# src/main/java/it/corona/unitest/controller/PokemonController.java
@@ -4,7 +4,6 @@ import it.corona.unitest.model.dto.*;
 import it.corona.unitest.service.PokemonService;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -24,28 +23,29 @@ public class PokemonController implements PokemonApi {
     private static final String REQUEST_END = "REQUEST END - ";
 
     @Override
-    public ResponseEntity<Void> createPokemon(CreatePokemonRequestDTO requestDTO) {
+    public ResponseEntity<ResponseDTO> createPokemon(CreatePokemonRequestDTO requestDTO) {
         log.info("REQUEST START - CreatePokemon: {}", requestDTO.getPokemonName());
+        ResponseDTO responseDTO = pokemonService.createPokemon(requestDTO);
         log.info("REQUEST END - CreatePokemon: {}", requestDTO.getPokemonName());
+        return ResponseEntity.status(responseDTO.getHttpStatusCode()).body(responseDTO);
+    }
+
+    @Override
+    public ResponseEntity<Void> updatePokemon(UpdatePokemonRequestDTO requestDTO) {
+        log.info(REQUEST_START + "UpdatePokemon: {}", requestDTO.getPokemonName());
+        log.info(REQUEST_END + "UpdatePokemon: {}", requestDTO.getPokemonName());
         return null;
     }
 
     @GetMapping("/find-by-id/{pokemonId}")
     public ResponseEntity<PokemonDto> findById(@PathVariable Long pokemonId) {
-        PokemonDto pokemonDto = pokemonService.findById(pokemonId);
-        return new ResponseEntity<>(pokemonDto, HttpStatus.OK);
+        return null;
     }
 
     @GetMapping("/find-all-pokemons")
     public ResponseEntity<List<PokemonDto>> findAllPokemon() {
-        List<PokemonDto> pokemons = pokemonService.findAllPokemon();
-        return new ResponseEntity<>(pokemons, HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<Void> updatePokemon(UpdatePokemonRequestDTO requestDTO) {
-        log.info("REQUEST START - UpdatePokemon: {}", requestDTO.getPokemonName());
-        log.info("REQUEST END - UpdatePokemon: {}", requestDTO.getPokemonName());
+        log.info(REQUEST_START + "findAllPokemon");
+        log.info(REQUEST_END + "findAllPokemon");
         return null;
     }
 
